kubernetes/vault/overlays/k3s/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: vault
  labels:
    app.kubernetes.io/instance: vault
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/instance: vault
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`vault.k3s.arthurvardevanyan.com`)
      services:
        - name: vault
          port: 443
  tls:
    passthrough: true
    domains:
      - main: vault.k3s.arthurvardevanyan.com
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-traefik
  namespace: vault
  labels:
    app.kubernetes.io/instance: vault
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vault.k3s.arthurvardevanyan.com`)
      kind: Rule
      services:
        - name: vault
          scheme: https
          port: 443
      middlewares:
        - name: https-redirect
